<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChallengeAndroidWear</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="request_button_string">Request</string>
    <string name="image_obj">image_obj</string>
    <string name="clear_button_string">Clear</string>
    <string name="save_button_string">Save</string>
    <string name="color_edit_text_string">color</string>
    <string name="size_edit_text_string">size</string>
    <string name="set_button_string">Set</string>
    <string name="description_string">description</string>
    <string name="cancel_button_string">Cancel</string>
    <string name="add_button_string">Add</string>
    <string name="loading_string">Loading…</string>
    <string name="add_alarm_string">Add Alarm</string>

    <string-array name="navigation_drawer_items">
        <item>SEARCH TAGS</item>
        <item>DESIGNER FINGER</item>
        <item>FREE FEATURE</item>
    </string-array>

</resources>
